--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <button class="response-btn" id="noBtn">No</button>
         </div>
     </div>
+    <div class="textCont-wrapper">
+    <div class="textCont"></div>
+</div>
 
     
 
