--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="textCont"></div>
+        <!-- Black container for mobile view -->
+    <div class="textCont-wrapper">
+        <div class="textCont"></div>
+    </div>
 
     <!-- Response container for the "Yes" and "No" buttons -->
     <div class="response-container hidden">
@@ -17,10 +21,6 @@
             <button class="response-btn" id="yesBtn">Yes</button>
             <button class="response-btn" id="noBtn">No</button>
         </div>
-    </div>
-    <div class="textCont-wrapper">
-    <div class="textCont"></div>
-</div>
 
     
 
