--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L L</title>
+    <title>Love Letter</title>
     <link rel="stylesheet" href="style.css"> 
     
 </head>
 <body>
     <div class="textCont"></div>
-        <!-- Black container for mobile view -->
-    <div class="textCont-wrapper">
-        <div class="textCont"></div>
-    </div>
 
     <!-- Response container for the "Yes" and "No" buttons -->
     <div class="response-container hidden">
-        <p class="question">Will you go out with me? I'll buy you boba:p</p>
+        <p class="question">Will you go out with me?</p>
         <div class="buttons">
             <button class="response-btn" id="yesBtn">Yes</button>
             <button class="response-btn" id="noBtn">No</button>
         </div>
+    </div>
 
     
 
@@ -40,7 +37,7 @@
 
     <!-- Love letter button -->
     <footer>
-        <a href="#" id="startText" class="center-btn" alt="">Click Me</a>
+        <a href="#" id="startText" class="center-btn" alt="">Love Letter</a>
     </footer>
 
     <script src="letter.js"></script>
