--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     
 </head>
 <body>
-    <div class="textCont"></div>
+    <div class="textCont-wrapper">
+        <div class="textCont"></div>
+    </div>
+    
 
     <!-- Response container for the "Yes" and "No" buttons -->
     <div class="response-container hidden">
