--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love Letter</title>
+    <title>L L</title>
     <link rel="stylesheet" href="style.css"> 
     
 </head>
 <body>
-    <div class="textCont-wrapper">
-        <div class="textCont"></div>
-    </div>
+    <div class="textCont"></div>
     
 
     <!-- Response container for the "Yes" and "No" buttons -->
@@ -40,7 +38,7 @@
 
     <!-- Love letter button -->
     <footer>
-        <a href="#" id="startText" class="center-btn" alt="">Love Letter</a>
+        <a href="#" id="startText" class="center-btn" alt="">Click Me</a>
     </footer>
 
     <script src="letter.js"></script>
